2009-06-29 [colin]	0.23.0cvs3

	* libgtkhtml/layout/htmlboxtext.c
		Fix bug 1937, 'another crasher in gtkhtml plugin'

2009-03-08 [paul]	0.23.0cvs2

	* configure.ac
	* po/ja.po
		add Japanese translation, submitted by kazken3

2009-03-06 [colin]	0.23.0cvs1

	* src/claws.def
		Fix win32 symbol lookup

2009-03-06 [paul]	0.23.0

	0.23 released

2009-03-06 [paul]	0.22.0cvs9

	* po/cs.po
	* po/fi.po
	* po/fr.po
	* po/hu.po
	* po/pt_BR.po
		updated by David Vachulka, Flammie Pirinen, Colin Leroy,
		Pader Rezso, and Frederico Goncalves Guimaraes

2009-02-23 [colin]	0.22.0cvs8

	* libgtkhtml/graphics/htmlstylepainter.c
		Fix copy/paste error

2009-02-23 [colin]	0.22.0cvs7

	* libgtkhtml/document/htmldocument.c
	* libgtkhtml/graphics/htmlstylepainter.c
		Fix missing NULL checks

2009-02-22 [colin]	0.22.0cvs6

	* libgtkhtml/css/cssparser.c
	* libgtkhtml/layout/htmlboxtext.c
	* libgtkhtml/layout/htmlstyleinherited.c
	* libgtkhtml/layout/htmlstyleoutline.c
	* libgtkhtml/util/rfc1738.c
	* src/gtkhtml2_viewer.c
		Some coverity fixes

2009-02-01 [paul]	0.22.0cvs5

	* src/gtkhtml2_prefs.c
		fix sensitivity

2009-02-01 [paul]	0.22.0cvs4

	* src/gtkhtml2_prefs.c
		a few more improvements to the english

2009-02-01 [paul]	0.22.0cvs3

	* src/gtkhtml2_prefs.c
		a few improvements to the english

2009-01-25 [colin]	0.22.0cvs2

	* src/gtkhtml2_viewer.c
		Restore focus after clicking on links
		Patch by Pawel

2008-12-30 [paul]	0.22.0cvs1

	* src/gtkhtml2_viewer.c
		no need to prematurely trim the uri in the statusbar

2008-12-19 [paul]	0.22.0

	0.22 released

2008-12-19 [paul]	0.21.0cvs7

	* configure.ac
	* po/cs.po
		added by David Vachulka
	* po/ru.po
		updated by Aleksei Miheev

2008-12-07 [paul]	0.21.0cvs6

	* configure.ac
		clean up check for curl

2008-12-07 [paul]	0.21.0cvs5

	* configure.ac
		prohibit gcc4's signedness warning

2008-12-02 [colin]	0.21.0cvs4

	* libgtkhtml/graphics/htmlimagefactory.c
		Better fix for 0.21.0cvs1 - don't use
		weak pointers to objects more short-